tests/bad/frontendErrors/badArrayLengthType.latte
int main() {

	int [] x = new int [true];
	return 0;
}
